RESOLVED FIXED245060
[CSS] Fix the build warning below since 254282@main.
https://bugs.webkit.org/show_bug.cgi?id=245060
Summary [CSS] Fix the build warning below since 254282@main.
Joonghun Park
Reported 2022-09-11 22:07:16 PDT
warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare] 6402 | if (noneCount > (!parsedImage + !parsedType)) | ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Attachments
EWS
Comment 1 2022-09-12 02:05:57 PDT
Committed 254375@main (fe524823fc99): <https://commits.webkit.org/254375@main> Reviewed commits have been landed. Closing PR #4248 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-09-12 02:06:17 PDT
Note You need to log in before you can comment on or make changes to this bug.