Unreviewed. Fix the build warning below since r254282@main. https://bugs.webkit.org/show_bug.cgi?id=245060

warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]

With the static_cast, we could indicate the intention to use the pointers for counting purpose more explicitly.

* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeListStyleShorthand):

Canonical link: https://commits.webkit.org/254375@main